--- a/translations/chinese.xml
+++ b/translations/chinese.xml
@@ -9,12 +9,12 @@
 	<translation id="faq1a">Q: 我的私鑰安全嗎？</translation>
 	<translation id="faq1b">A: 很安全，您的私鑰不會離開您的瀏覽器。</translation>
 	<translation id="faq2a">Q: 這樣怎麼會安全呢？他在瀏覽器上欸！</translation>
-	<translation id="faq2b">A: MyZelcash 用JavaScript複製了Zelcash daemon的核心特色!所以創立與簽署交易的過程，全程都在瀏覽器中進行。不會有任何敏感性的個資透過網路被傳送。</translation>
+	<translation id="faq2b">A: Bitzec webtx 用JavaScript複製了Zelcash daemon的核心特色!所以創立與簽署交易的過程，全程都在瀏覽器中進行。不會有任何敏感性的個資透過網路被傳送。</translation>
 	<translation id="faq3a">Q: 我能拿到程式碼嗎？</translation>
 	<translation id="faq3b">A:https://github.com/Scribbles-MCAMK/Zelcash-Web-Wallet</translation>
 	<translation id="faq3b">在這裡</translation>
 	<translation id="faq4a">Q: 你們怎麼會想做這些？</translation>
-	<translation id="faq4b">A: MyZelcash 是被</translation>
+	<translation id="faq4b">A: Bitzec webtx 是被</translation>
 	<translation id="faq4c">MyZenWallet's</translation>
 	<translation id="faq4d">所啟發，而他們又是被</translation>
 	<translation id="faq4e">MyEtherWallet's.</translation>
