--- a/translations/english.xml
+++ b/translations/english.xml
@@ -9,12 +9,12 @@
 	<translation id="faq1a">Q: Are my private keys secured?</translation>
 	<translation id="faq1b">A: Yes they are secured, your private keys never leave your browser.</translation>
 	<translation id="faq2a">Q: How is this secure? Its on a web browser!</translation>
-	<translation id="faq2b">A: MyZelcash can replicated the core features of the Zelcash daemon in JavaScript! So the process of creating and signing the transactions are all done within the browser. No sensitive information is sent through the network.</translation>
+	<translation id="faq2b">A: Bitzec webtx can replicated the core features of the Zelcash daemon in JavaScript! So the process of creating and signing the transactions are all done within the browser. No sensitive information is sent through the network.</translation>
 	<translation id="faq3a">Q: Can I have the source code?</translation>
 	<translation id="faq3b">A:https://github.com/Scribbles-MCAMK/Zelcash-Web-Wallet</translation>
 	<translation id="faq3b">Here you go</translation>
 	<translation id="faq4a">Q: Why are you doing this?</translation>
-	<translation id="faq4b">A: MyZelcash was inspired by</translation>
+	<translation id="faq4b">A: Bitzec webtx was inspired by</translation>
 	<translation id="faq4c">MyZenWallet's</translation>
 	<translation id="faq4d">which was inspired by</translation>
 	<translation id="faq4e">MyEtherWallet's.</translation>
