--- a/translations/ukrainian.xml
+++ b/translations/ukrainian.xml
@@ -9,12 +9,12 @@
 	<translation id="faq1a">Пит.: Чи захищені мої особисті ключі?</translation>
 	<translation id="faq1b">Від.: Так, вони захищені, ваші особисті ключі ніколи не залишають ваш браузер.</translation>
 	<translation id="faq2a">Пит.: На скільки це безпечно? Якщо в браузері!</translation>
-	<translation id="faq2b">Від.: MyZelcash відтворив основні функції демонів Zelcash в JavaScript! Таким чином, процес створення та підписання транзакцій виконується в браузері. Ніяка конфіденційна інформація не надсилається через мережу.</translation>
+	<translation id="faq2b">Від.: Bitzec webtx відтворив основні функції демонів Zelcash в JavaScript! Таким чином, процес створення та підписання транзакцій виконується в браузері. Ніяка конфіденційна інформація не надсилається через мережу.</translation>
 	<translation id="faq3a">Пит.:Чи можу я отримати початковий код?</translation>
 	<translation id="faq3b">Від.:https://github.com/Scribbles-MCAMK/Zelcash-Web-Wallet</translation>
 	<translation id="faq3b">Перейдіть сюди</translation>
 	<translation id="faq4a">Пит.: Чому ви це робите?</translation>
-	<translation id="faq4b">Від.: MyZelcash був натхненний</translation>
+	<translation id="faq4b">Від.: Bitzec webtx був натхненний</translation>
 	<translation id="faq4c">MyZenWallet's</translation>
 	<translation id="faq4d">якого надихнув</translation>
 	<translation id="faq4e">MyEtherWallet's.</translation>
